[package]
name = "mlo-proj-f2020"
version = "0.1.0"
authors = [
    "Antonia 'Nia' Calia-Bogan <acaliabogan@acaliabogan.dev>"
]
edition = "2018"

[dependencies]
# N-dimentional arrays
ndarray = "0.13.1"
# Sparse arrays
sprs = {version = "0.9.2", features = ["multi_thread"]}
# CSV parsing
csv = "1.1.4"
# Serialization and deserialization
serde = "1.0.117"
# Graph representation and algorithms.
# Also contains a CSR (sparse row matrix) representation of graphs
petgraph = "0.5.1"
# Lazily evaluated statics
lazy_static = "1.4.0"
