[package]
name = "mlo-proj-f2020"
version = "0.1.0"
authors = [
    "Antonia 'Nia' Calia-Bogan <acaliabogan@acaliabogan.dev>"
]
edition = "2018"

[dependencies]
# N-dimentional arrays
ndarray = "0.13.1"      # Core ndarray traits and types
ndarray-rand = "0.11.0" # Random distributions and generations
# Sparse arrays
sprs = {version = "0.9.2", features = ["multi_thread"]}
# CSV parsing
csv = "1.1.4"
# Serialization and deserialization
serde = {version = "1", features = ["derive"]}
# Parallel computation library
rayon = "1.5.0"
# Random number generation
rand = "0.7.3"          # Core RNG traits and types
rand_isaac = "0.2.0"    # Isaac64 Random Number Generator
# Terminal indicators
idicatif = "0.15.0"